# pypi_quick_sort

./: README.md  pyproject.toml
src/: quick_sort.py
tests/: test_quicksort.py
