[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi_quick_sort_nxtperfect"
version = "0.0.1"
authors = [{ name = "Nxtperfect", email = "alakaxan@protonmail.com" }]
description = "Quick sort package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nxtperfect/pypi_quick_sort"
"Bug Tracker" = "https://github.com/nxtperfect/pypi_quick_sort/issues"
